# Data-Pipelines

databricks-retail-lakehouse/: .env.example  .gitignore  README.md  SECURITY.md  databricks.yml  pyproject.toml
databricks-retail-lakehouse/.github/workflows/: deploy.yml  validate.yml
databricks-retail-lakehouse/docs/: architecture.md  data_dictionary.md  deployment.md  interview_talking_points.md
databricks-retail-lakehouse/resources/: retail_job.job.yml  retail_pipeline.pipeline.yml
databricks-retail-lakehouse/scripts/: check_repository_safety.py  render_bootstrap.py
databricks-retail-lakehouse/sql/: bootstrap.sql  bootstrap.sql.template
databricks-retail-lakehouse/src/pipeline/: 01_bronze.py  02_silver.py  03_gold.py
databricks-retail-lakehouse/src/setup/: generate_source_data.py
databricks-retail-lakehouse/src/validation/: validate_pipeline.py
databricks-retail-lakehouse/tests/: test_transformations.py
