[project]
name = "databricks-retail-lakehouse"
version = "0.1.0"
description = "Production-style Databricks retail lakehouse portfolio project"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
